...
            Spacer()
            VStack {
                Text(numberOfBugs)
                    .font(.title)
                    .bold()
                    .foregroundColor(.text)
                Text("Bugs")
                    .font(.caption)
                    .foregroundColor(.secondaryText)
            }
            Spacer()
        }
        .padding(.vertical, 5)
...
